# Obj-Renderer

./: CMakeLists.txt
src/: CMakeLists.txt  fileController.cpp  fileController.h  main.cpp  shapeGenerator.cpp  shapeGenerator.h
src/graphics/: privateRenderEngine.cpp  privateRenderEngine.h  renderColorPass.cpp  renderColorPass.h  renderDevice.cpp  renderDevice.h  renderEngine.cpp  renderEngine.h  renderHelpers.cpp  renderHelpers.h  renderLinePass.cpp  renderLinePass.h  renderParametrs.h  renderResources.cpp  renderResources.h  renderTextPass.cpp  renderTextPass.h  ubo.h  uboCamera.h  vertex.h
src/graphics/shaders/: vertex.vert
src/graphics/shaders/line/: vertex.vert
src/graphics/shaders/triangle/: fragment.frag
